vlib/v/checker/tests/hex_lit_wrong_digit_err.vv
fn main() {
    println(0x111ghi)
}
